--- a/TODO
+++ b/TODO
@@ -3,16 +3,16 @@
     ✔ Delete Controller @done(23-02-14 08:36)
     ✔ Delete Public View @done(23-02-14 08:36)
 
-☐ Membuat Fitur Schedules @started(23-02-14 08:36)
+✔ Membuat Fitur Schedules @started(23-02-14 08:36) @done(23-02-14 17:33) @lasted(8h57m44s)
     ✔ Fitur Create @done(23-02-14 15:05)
     ✔ Fitur Read @done(23-02-14 15:05)
     ✔ Fitur Edit @done(23-02-14 17:28)
     ✔ Fitur Delete @done(23-02-14 17:30)
 
-☐ Membuat Fitur Presences
-    ☐ Fitur Create
-    ☐ Fitur Read
-    ☐ Fitur Edit
-    ☐ Fitur Delete
+✔ Membuat Fitur Presences @started(23-02-14 17:34) @done(23-02-14 21:40) @lasted(4h6m50s)
+    ✔ Fitur Create @done(23-02-14 21:40)
+    ✔ Fitur Read @done(23-02-14 17:54)
+    ✔ Fitur Edit @done(23-02-14 21:40)
+    ✔ Fitur Delete @done(23-02-14 21:40)
 
 ☐ Membuat Tampilan Form Absensi IDBC
